--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -914,7 +914,7 @@ body{
    justify-content: center;
    align-items: center;
    column-gap: 10px;
-   padding: 35px 25px;
+   padding: 45px 35px;
    text-align: left;
    border-radius: 5px;
 }
@@ -930,7 +930,7 @@ body{
    font-size: var(--tiny-font-size);
    font-weight: var(--font-regular);
    line-height: 20px;
-   max-width: 100px;
+   max-width: 120px;
 }
 
 .about-buttons{
@@ -2377,6 +2377,11 @@ body{
 
 }
 
+
+
+
+
+
 /* CSS Variables for consistent theming */
 :root {
 
@@ -2514,8 +2519,8 @@ body{
   margin-bottom: 1rem; /* Reduced from 1.5rem */
   flex-grow: 1;
   display: -webkit-box;
-  --webkit-line-clamp: 3; /* Limit to 3 lines */
-  --webkit-box-orient: vertical;
+  -webkit-line-clamp: 3; /* Limit to 3 lines */
+  -webkit-box-orient: vertical;
   overflow: hidden;
 }
 
